--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body, html {
-
   color: rgb(55, 65, 81);
 }
 
@@ -28,4 +27,12 @@ span {
   float: right;
   font-weight: bold;
   font-size: 14px;
+}
+
+li img {
+  width: 15px;
+  height: 15px;
+  opacity: .5;
+  float: right;
+  margin-left: 5px;
 }
