--- a/style.css
+++ b/style.css
@@ -16,12 +16,20 @@ ul {
 li {
   padding: 5px 10px;
   font-size: 13px;
+  border: 1px solid transparent;
 }
 
 li:hover {
   background-color: #e5e5e5;
   border-radius: 10px;
   cursor: pointer;
+  border: 1px solid transparent;
+}
+
+li:active {
+  background-color: #ccc;
+  border-radius: 10px;
+  border: 1px solid #999;
 }
 
 span {
